Bug 87639 - EDITING: Image-filter Smooth crashes LO immediately
Summary: EDITING: Image-filter Smooth crashes LO immediately
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.5.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 88937 88978 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-23 15:40 UTC by Robert Großkopf
Modified: 2015-12-17 08:42 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (4.4) (4.37 KB, text/plain)
2014-12-23 19:03 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2014-12-23 15:40:48 UTC
Create a new Writer-document.
Chose an image (Insert → Image → From File)
Mark the image for editing.
Chose Filter → Smooth (you will find this in the toolbar "Picture").
LO crashes immediately.

Works right up to LO 4.3.5.2,, doesn't work since LO 4.4.0.0.beta1 (first I could test here).

My system: OpenSUSE 12.3 64bit rpm Linux.
Comment 1 Thomas Hackert 2014-12-23 16:38:56 UTC
Hello Robert, @ll,
I can confirm your observation with

LO Version: 4.4.0.0.beta2
Build ID: be92f32b8f21603a6b7a75dd645f7475bdee519d
Locale: de_DE

(parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel and with Germanophone lang- as well as helppack) ... :(

Interestingly, in beta2 I get the message

<quote>
*** Error in `~/LO/instdir/4400beta2/opt/libreofficedev4.4/program/soffice.bin': double free or corruption (out): 0x09fb6560 ***
</quote>

(a little bit anonymized to gain privacy ... ;) ), when I start LO from the command line, and it crashes with en_US and with de_DE UI language. If I test it with

LO Version: 4.4.0.1
Build-ID: 1ba9640ddd424f1f535c75bf2b86703770b8cf6f
Gebietsschema: de_DE

(also parallel installed, and with Germanophone lang- as well as helppack, and both on my Debian Testing i686 system), it crashes without any error message with Germanophone UI, but not with en_US.

HTH and have a nice afternoon
Thomas.
Comment 2 Julien Nabet 2014-12-23 19:03:08 UTC
Created attachment 111226 [details]
bt with debug symbols (4.4)

On pc Debian x86-64 with 4.4 sources updated today, I could reproduce this.

I attached bt with symbols.
Comment 3 Julien Nabet 2014-12-23 19:28:25 UTC
Reverting http://cgit.freedesktop.org/libreoffice/core/commit/?id=10e77ab3ff6f4314137acd6e2702a6e5c1ce1fae prevents from the crash but this commit seems right to me.

Thorsten: thought you might be interested in this one, any idea?
Comment 4 Joel Madero 2015-01-05 17:18:03 UTC
Adding bibisected to whiteboard as bisected keyword is a subset of bibisected whiteboard.

Thanks!
Comment 5 Caolán McNamara 2015-01-22 15:51:54 UTC
the input bitmap is always of dimensions equal to that of the rotated dimensions of the bitmap that operates on it.
Comment 6 Commit Notification 2015-01-22 16:05:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b9ecfd4f45501e4696f966c714fc2bcc43ce38b

Resolves: fdo#87639 Image-filter Smooth crashes

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2015-02-01 17:27:28 UTC
*** Bug 88978 has been marked as a duplicate of this bug. ***
Comment 8 Caolán McNamara 2015-02-04 11:17:18 UTC
*** Bug 88937 has been marked as a duplicate of this bug. ***
Comment 9 Robinson Tryon (qubit) 2015-12-17 08:42:29 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]