Resolves: fdo#87639 Image-filter Smooth crashes

regression from

commit 10e77ab3ff6f4314137acd6e2702a6e5c1ce1fae
Author: Thorsten Behrens <thb@documentfoundation.org>
Date:   Sun Nov 2 22:37:32 2014 +0100

    coverity#1242508: swapped arguments

rename the variables to indicate which are source and
which are dest indexes and that the aNewBitmap
argument is always, and assert that it must be, of
equivalent rotated source to the Bitmap which has
ImplConvolutionPass called on it.

Change-Id: If9715b9f29655da66c6981c0f7cab3d89c528ed7