include/vcl/bitmap.hxx
@@ -807,7 +807,6 @@ public:
 
     SAL_DLLPRIVATE bool     ImplConvolutionPass(
                                 Bitmap& aNewBitmap,
-                                const int nNewSize,
                                 BitmapReadAccess* pReadAcc,
                                 int aNumberOfContributions,
                                 double* pWeights,
